fix: bib latex, data consisty checks

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -167,13 +167,13 @@ Leipzig, den 17.09.2024 \\
 
 \appendix
 
-  %\input{results/appendix.tex}
+  \input{results/appendix.tex}
 
 
 
 
 %************************************************************************
 \FloatBarrier %**********************************************************
-\bibliography{/Users/kaspar/documents/Bachelorthesis/Referenzen.bib} %***
+\bibliography{references.bib} %***
 \end{document} %*********************************************************
 %************************************************************************
