feat: new latex make files

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -22,7 +22,6 @@
 %*************** Importe ***************
 \usepackage{graphicx}
 \usepackage{epstopdf}
-\usepackage{svg}
 \graphicspath{{.}{plots/}{images/}} % Ordner in den gesucht werden soll
 \usepackage{makecell}
 
@@ -79,7 +78,7 @@
 
 %******************** Title ********************
 \title{
-        {\includesvg[scale=1.5]{images/logo.svg}} \\
+        {\includegraphics[scale=1.5]{images/logo.eps}} \\
         \vspace{1cm}
         {\large Bachelor Thesis} \\ 
         {Ising model on a square lattice with competing nearest and next-nearest neighbor interactions} \\
